--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,11 +31,11 @@
             <nav>
                 <ul class="nav">
                     <li><a href="/Home/Index">Главная</a></li>
-                        <li><a href="/Services/Index">@FieldValuesVM.ServiceMenuItemName</a></li>
-                        <li><a href="/Projects/Index">@FieldValuesVM.ProjectMenuItemName</a></li>
-                        <li><a href="/Blog/Index">@FieldValuesVM.BlogMenuItemName</a></li>
+                        <li><a href="/Services/Index">@FieldValuesVM?.ServiceMenuItemName</a></li>
+                        <li><a href="/Projects/Index">@FieldValuesVM?.ProjectMenuItemName</a></li>
+                        <li><a href="/Blog/Index">@FieldValuesVM?.BlogMenuItemName</a></li>
                     <li><a href="#"></a></li>
-                        <li><a href="/Contacts/Index">@FieldValuesVM.ContactsMenuItemName</a></li>
+                        <li><a href="/Contacts/Index">@FieldValuesVM?.ContactsMenuItemName</a></li>
                 </ul>
             </nav>
             <h1 class="slogan">Расширяем возможности</h1>
@@ -51,10 +51,10 @@
                     <ul class="aside">
                         <li><a href="/Home/Desktop">Рабочий стол</a></li>
                         <li><a href="/Home/Index">Главная</a></li>
-                        <li><a href="/Projects/Index">@FieldValuesVM.ProjectMenuItemName</a></li>
-                        <li><a href="/Services/Index">@FieldValuesVM.ServiceMenuItemName</a></li>
-                        <li><a href="/Blog/Index/">@FieldValuesVM.BlogMenuItemName</a></li>
-                        <li><a href="/Contacts/Index">@FieldValuesVM.ContactsMenuItemName</a></li>
+                        <li><a href="/Projects/Index">@FieldValuesVM?.ProjectMenuItemName</a></li>
+                        <li><a href="/Services/Index">@FieldValuesVM?.ServiceMenuItemName</a></li>
+                        <li><a href="/Blog/Index/">@FieldValuesVM?.BlogMenuItemName</a></li>
+                        <li><a href="/Contacts/Index">@FieldValuesVM?.ContactsMenuItemName</a></li>
                     </ul>
                 </nav>
             </aside>            
