--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <main class="container">
-    <p class="text-before-form">@FieldValuesVM.PrecedingFormText</p>
+    <p class="text-before-form">@FieldValuesVM?.PrecedingFormText</p>
     <form action="/Home/AddOrder" method="post" class="order-form">
         <div class="wrapper input1-wrapper">
             <label class="label" for="name">Имя: </label> 
