--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li><a href="/Home/Index">Главная</a></li>
                         <li><a href="/Services/Index">@FieldValuesVM?.ServiceMenuItemName</a></li>
                         <li><a href="/Projects/Index">@FieldValuesVM?.ProjectMenuItemName</a></li>
-                        <li><a href="/Blog/Index">@FieldValuesVM?.BlogMenuItemName</a></li>
+                        <li><a href="/Blogs/Index">@FieldValuesVM?.BlogMenuItemName</a></li>
                     <li><a href="#"></a></li>
                         <li><a href="/Contacts/Index">@FieldValuesVM?.ContactsMenuItemName</a></li>
                 </ul>
@@ -53,7 +53,7 @@
                         <li><a href="/Home/Index">Главная</a></li>
                         <li><a href="/Projects/Index">@FieldValuesVM?.ProjectMenuItemName</a></li>
                         <li><a href="/Services/Index">@FieldValuesVM?.ServiceMenuItemName</a></li>
-                        <li><a href="/Blog/Index/">@FieldValuesVM?.BlogMenuItemName</a></li>
+                        <li><a href="/Blogs/Index/">@FieldValuesVM?.BlogMenuItemName</a></li>
                         <li><a href="/Contacts/Index">@FieldValuesVM?.ContactsMenuItemName</a></li>
                     </ul>
                 </nav>
